--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -8,6 +8,10 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button name="open_patient_appointment" type="object" class="oe_stat_button" icon="fa-calendar">
+                        </button>
+                    </div>
                     <field name="image" widget="image" class="oe_avatar"/>
                     <div class="oe_title">
                         <h1>
