--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -10,6 +10,7 @@
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button name="open_patient_appointment" type="object" class="oe_stat_button" icon="fa-calendar">
+                            <field name="appointment_count" widget="statinfo"/>
                         </button>
                     </div>
                     <field name="image" widget="image" class="oe_avatar"/>
