state field add

--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -6,6 +6,9 @@
         <field name="model">hospital.appointment</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,confirm,done"/>
+                </header>
                 <sheet>
                     <div class="oe_title">
                         <h1>
