--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -7,7 +7,12 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <field name="state" widget="statusbar" statusbar_visible="draft,confirm,done"/>
+                    <button name="action_confirm" string="Confirm" states="draft" type="object"
+                            class="oe_highlight"/>
+                    <button name="action_approve" string="Approve" states="confirm" type="object"
+                            class="oe_highlight"/>
+                    <button name="action_cancel" string="Cancel" states="draft" type="object"/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,confirm,approve"/>
                 </header>
                 <sheet>
                     <div class="oe_title">
@@ -48,6 +53,7 @@
                 <field name="patient_age"/>
                 <field name="appointment_date"/>
                 <field name="notes"/>
+                <field name="state"/>
             </tree>
         </field>
     </record>
