--- a/views/menu.xml
+++ b/views/menu.xml
@@ -15,4 +15,9 @@
               parent="menu_hospital_root"
               sequence="1"/>
 
+    <menuitem id="menu_doctor_root"
+              name="Doctor Details"
+              parent="menu_hospital_root"
+              sequence="2"/>
+
 </odoo>
