--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -26,6 +26,10 @@
                                 icon="fa-globe">
                             <field name="appointment_count" widget="statinfo"/>
                         </button>
+                        <button name="toggle_active" type="object" class="oe_stat_button" icon="fa-archive">
+                            <field name="active" widget="boolean_button"
+                                   options="{&quot;terminology&quot;: &quot;archive&quot;}"/>
+                        </button>
                     </div>
                     <field name="image" widget="image" class="oe_avatar"/>
                     <div class="oe_title">
