--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -47,6 +47,7 @@
                             <field name="patient_age"/>
                             <field name="gender"/>
                             <field name="contact"/>
+                            <field name="doctor_id"/>
                         </group>
                         <group>
                             <field name="age_group"/>
@@ -81,6 +82,7 @@
                 <field name="sl_no"/>
                 <field name="patient_name"/>
                 <field name="patient_age"/>
+                <field name="doctor_id"/>
                 <field name="gender"/>
                 <field name="age_group"/>
                 <field name="email_id"/>
