--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -32,6 +32,19 @@
                     <group>
                         <field name="notes"/>
                     </group>
+                    <notebook>
+                        <page string="Doctor Prescription">
+                            <field name="appointment_lines">
+                                <tree editable="bottom">
+                                    <field name="product_id"/>
+                                    <field name="product_qty"/>
+                                </tree>
+                            </field>
+                        </page>
+                        <page string="Pharmacy">
+
+                        </page>
+                    </notebook>
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" widget="mail_followers"/>
