--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -16,6 +16,9 @@
         <field name="model">hospital.patient</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <button name="%(create_appointment_wizard)d" string="Create Appointment" type="action" class="oe_highlight"/>
+                </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button name="open_patient_appointment" type="object" class="oe_stat_button" icon="fa-calendar">
