--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
+    <record id="actions_patient_appointment" model="ir.actions.act_window">
+        <field name="name">Appointments</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">hospital.appointment</field>
+        <field name="domain">[]</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="appointment_tree_view"/>
+        <field name="binding_model_id" ref="om_hospital.model_hospital_patient"/>
+    </record>
+
+
     <!--   <smart button action/>-->
     <record id="open_patient_appointment" model="ir.actions.act_window">
         <field name="name">Appointments</field>
