--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -31,6 +31,7 @@
                 <header>
                     <button name="%(create_appointment_wizard)d" string="Create Appointment" type="action"
                             class="oe_highlight" context="{'default_patient_id': active_id}"/>
+                    <button name="action_send_email" string="Send By Email" type="object" class="oe_highlight"/>
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
