--- a/reports/paitent_card_template.xml
+++ b/reports/paitent_card_template.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-<!--    <template id="report_patient">-->
-<!--        <t t-call="web.html_container">-->
-<!--            <t t-foreach="docs" t-as="doc">-->
-<!--                <t t-call="web.external_layout">-->
-<!--                    <div class="page">-->
-<!--                        <br/>-->
-<!--                        <br/>-->
-<!--                        <br/>-->
-<!--                        <br/>-->
-<!--                        <div class="oe_structure"/>-->
-<!--                        <div class="row">-->
-<!--                            <div class="col-xs-2" style="margin:auto;">-->
-<!--                            </div>-->
-<!--                            <center>-->
+    <template id="report_patient">
+        <t t-call="web.html_container">
+            <t t-foreach="docs" t-as="doc">
+                <t t-call="web.external_layout">
+                    <div class="page">
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <div class="oe_structure"/>
+                        <div class="row">
+                            <div class="col-xs-2" style="margin:auto;">
+                            </div>
+                            <center>
+                                <table class="table table-bordered mb-0" style="border: 2px solid black;">
+                                    <tr>
+                                        <td class="text-center align-middle" style="height: 6rem;">
+                                            <img alt="Barcode"
+                                                 t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', doc.sl_no , 600, 150)"
+                                                 style="width:100%;height:4rem;"/>
+                                            <span t-field="doc.sl_no"/>
+                                        </td>
+                                    </tr>
+                                </table>
 <!--                                <div class="col-xs-8" style="margin:auto;">-->
 <!--                                    <table class="table table-condensed" style="border: 3px solid black !important;">-->
 <!--                                        <tr>-->
@@ -47,74 +57,76 @@
 <!--                                        </tr>-->
 <!--                                    </table>-->
 <!--                                </div>-->
-<!--                            </center>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </t>-->
-<!--            </t>-->
-<!--        </t>-->
-<!--    </template>-->
-     <template id="report_patient">
-        <t t-call="web.html_container">
-            <t t-foreach="docs" t-as="doc">
-                <t t-call="web.external_layout">
-                    <div class="page">
-                        <div class="oe_structure"/>
-                        <div class="row justify-content-center">
-                            <div class="col-xs-8">
-                                <table class="table table-condensed"
-                                       style="border: 3px solid black !important; width:100%;">
-                                    <tr>
-                                        <td width="40%" style="text-align: center; padding-top:10px;">
-                                            <img t-if="not doc.image"
-                                                 t-att-src="'/web/static/img/preview_standard.png'"
-                                                 height="120" width="120" border="1"/>
-                                            <img t-if="doc.image"
-                                                 t-att-src="'data:image/png;base64,%s' % to_text(doc.image)"
-                                                 height="120" width="120" border="1"/>
-                                            <h2>
-                                                <strong>
-                                                    <span t-field="doc.patient_name"/>
-                                                </strong>
-                                            </h2>
-                                        </td>
-                                        <td width="60%">
-                                            <table style="width:100%;">
-                                                <tr>
-                                                    <td style="text-align:right;">
-                                                        <strong>Age :</strong>
-                                                    </td>
-                                                    <td style="text-align:left; padding-left:10px;">
-                                                        <span t-field="doc.patient_age"/>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td style="text-align:right;">
-                                                        <strong>Gender :</strong>
-                                                    </td>
-                                                    <td style="text-align:left; padding-left:10px;">
-                                                        <span t-field="doc.gender"/>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td style="text-align:right;">
-                                                        <strong>Email :</strong>
-                                                    </td>
-                                                    <td style="text-align:left; padding-left:10px;">
-                                                        <span t-field="doc.email_id"/>
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
+                            </center>
                         </div>
                     </div>
                 </t>
             </t>
         </t>
     </template>
+
+
+<!--     <template id="report_patient">-->
+<!--        <t t-call="web.html_container">-->
+<!--            <t t-foreach="docs" t-as="doc">-->
+<!--                <t t-call="web.external_layout">-->
+<!--                    <div class="page">-->
+<!--                        <div class="oe_structure"/>-->
+<!--                        <div class="row justify-content-center">-->
+<!--                            <div class="col-xs-8">-->
+<!--                                <table class="table table-condensed"-->
+<!--                                       style="border: 3px solid black !important; width:100%;">-->
+<!--                                    <tr>-->
+<!--                                        <td width="40%" style="text-align: center; padding-top:10px;">-->
+<!--                                            <img t-if="not doc.image"-->
+<!--                                                 t-att-src="'/web/static/img/preview_standard.png'"-->
+<!--                                                 height="120" width="120" border="1"/>-->
+<!--                                            <img t-if="doc.image"-->
+<!--                                                 t-att-src="'data:image/png;base64,%s' % to_text(doc.image)"-->
+<!--                                                 height="120" width="120" border="1"/>-->
+<!--                                            <h2>-->
+<!--                                                <strong>-->
+<!--                                                    <span t-field="doc.patient_name"/>-->
+<!--                                                </strong>-->
+<!--                                            </h2>-->
+<!--                                        </td>-->
+<!--                                        <td width="60%">-->
+<!--                                            <table style="width:100%;">-->
+<!--                                                <tr>-->
+<!--                                                    <td style="text-align:right;">-->
+<!--                                                        <strong>Age :</strong>-->
+<!--                                                    </td>-->
+<!--                                                    <td style="text-align:left; padding-left:10px;">-->
+<!--                                                        <span t-field="doc.patient_age"/>-->
+<!--                                                    </td>-->
+<!--                                                </tr>-->
+<!--                                                <tr>-->
+<!--                                                    <td style="text-align:right;">-->
+<!--                                                        <strong>Gender :</strong>-->
+<!--                                                    </td>-->
+<!--                                                    <td style="text-align:left; padding-left:10px;">-->
+<!--                                                        <span t-field="doc.gender"/>-->
+<!--                                                    </td>-->
+<!--                                                </tr>-->
+<!--                                                <tr>-->
+<!--                                                    <td style="text-align:right;">-->
+<!--                                                        <strong>Email :</strong>-->
+<!--                                                    </td>-->
+<!--                                                    <td style="text-align:left; padding-left:10px;">-->
+<!--                                                        <span t-field="doc.email_id"/>-->
+<!--                                                    </td>-->
+<!--                                                </tr>-->
+<!--                                            </table>-->
+<!--                                        </td>-->
+<!--                                    </tr>-->
+<!--                                </table>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </t>-->
+<!--            </t>-->
+<!--        </t>-->
+<!--    </template>-->
 
 
 </odoo>
