--- a/reports/paitent_card_template.xml
+++ b/reports/paitent_card_template.xml
@@ -25,38 +25,38 @@
                                         </td>
                                     </tr>
                                 </table>
-<!--                                <div class="col-xs-8" style="margin:auto;">-->
-<!--                                    <table class="table table-condensed" style="border: 3px solid black !important;">-->
-<!--                                        <tr>-->
-<!--                                            <td width="40%">-->
-<!--                                                <p style="text-align: center; padding-top:10px">-->
-<!--                                                    <img t-if="not doc.image"-->
-<!--                                                         t-att-src="'/web/static/img/preview_standard.png'" height="120"-->
-<!--                                                         border="1" width="120"/>-->
-<!--                                                    <img t-if="doc.image"-->
-<!--                                                         t-att-src="'data:image/png;base64,%s' % to_text(doc.image)" height="120" border="1" width="120"/>-->
-<!--                                                </p>-->
-<!--                                                <p style="text-align:center;">-->
-<!--                                                    <h2><strong><span t-field="doc.patient_name"/></strong></h2>-->
-<!--                                                </p>-->
-<!--                                            </td>-->
-<!--                                            <td width="60%">-->
-<!--                                                <tr>-->
-<!--                                                    <td>-->
-<!--                                                        <p style="text-align:right;"><strong>Age :</strong></p>-->
-<!--                                                        <p style="text-align:right;"><strong>Gender :</strong></p>-->
-<!--                                                        <p style="text-align:right;"><strong>Email :</strong></p>-->
-<!--                                                    </td>-->
-<!--                                                    <td>-->
-<!--                                                        <p style="text-align:left; padding-left:10px;" t-field="doc.patient_age"/>-->
-<!--                                                        <p style="text-align:left; padding-left:10px;" t-field="doc.gender"/>-->
-<!--                                                        <p style="text-align:left; padding-left:10px;" t-field="doc.email_id"/>-->
-<!--                                                    </td>-->
-<!--                                                </tr>-->
-<!--                                            </td>-->
-<!--                                        </tr>-->
-<!--                                    </table>-->
-<!--                                </div>-->
+                                <div class="col-xs-8" style="margin:auto;">
+                                    <table class="table table-condensed" style="border: 3px solid black !important;">
+                                        <tr>
+                                            <td width="40%">
+                                                <p style="text-align: center; padding-top:10px">
+                                                    <img t-if="not doc.image"
+                                                         t-att-src="'/web/static/img/preview_standard.png'" height="120"
+                                                         border="1" width="120"/>
+                                                    <img t-if="doc.image"
+                                                         t-att-src="'data:image/png;base64,%s' % to_text(doc.image)" height="120" border="1" width="120"/>
+                                                </p>
+                                                <p style="text-align:center;">
+                                                    <h2><strong><span t-field="doc.patient_name"/></strong></h2>
+                                                </p>
+                                            </td>
+                                            <td width="60%">
+                                                <tr>
+                                                    <td>
+                                                        <p style="text-align:right;"><strong>Age :</strong></p>
+                                                        <p style="text-align:right;"><strong>Gender :</strong></p>
+                                                        <p style="text-align:right;"><strong>Email :</strong></p>
+                                                    </td>
+                                                    <td>
+                                                        <p style="text-align:left; padding-left:10px;" t-field="doc.patient_age"/>
+                                                        <p style="text-align:left; padding-left:10px;" t-field="doc.gender"/>
+                                                        <p style="text-align:left; padding-left:10px;" t-field="doc.email_id"/>
+                                                    </td>
+                                                </tr>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
                             </center>
                         </div>
                     </div>
